aws-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-test
  namespace: bank-api
spec:
  serviceAccountName: kafka-ui
  restartPolicy: Never
  containers:
    - name: aws-cli
      image: amazon/aws-cli
      command:
        - aws
        - sts
        - get-caller-identity
